--- a/index.html
+++ b/index.html
@@ -1,198 +1,121 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Página Institucional Genérica</title>
-  </head>
-  <body>
-    <!-- ====== Header ====== -->
-    <header>
-      <div>
-        <img src="" alt="" />
-        <button>Entrar para próxima turma</button>
-      </div>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="./src/scripts/index.js" defer></script>
+    <link rel="stylesheet" href="./src/styles/index.css">
+    <title>Site Institucional Genérico</title>
+</head>
+<body>
+    <header class="header__container">
+        <div class="header__div">
+            <img src="./src/assets/logo.svg" alt="Logo do site">
+        <div>
+            <button class="header__button--enter">Entrar para próxima turma</button>
+        </div>
+        </div>
     </header>
-    <main>
-      <!-- ====== Section Banner ====== -->
-      <section>
-        <div>
-          <h1>Desenvolvendo <span>suas</span> próximas habilidades</h1>
-          <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting
-            industry. Lorem Ipsum has been the industry's standard dummy text
-            ever since the 1500s
-          </p>
-          <button>Sobre nós</button>
-        </div>
-      </section>
 
-      <!-- ====== Section About ====== -->
-      <section>
-        <div>
-          <h2>Quem somos nós?</h2>
-          <p>
-            It is a long established fact that a reader will be distracted by
-            the readable content of a page when looking at its layout. The point
-            of using Lorem Ipsum is that it has a more-or-less normal
-            distribution of letters, as opposed to using.
-          </p>
-        </div>
-      </section>
-
-      <!-- ====== Section FAQ ====== -->
-      <section>
-        <div>
-          <!-- LEFT SIDE -->
-          <div>
-            <div>
-              <h2>Dúvidas frequentes</h2>
-              <p>
-                Lorem Ipsum is simply dummy text of the printing and typesetting
-                industry. Lorem Ipsum has been the industry's standard dummy
-                text ever since the 1500s
-              </p>
-              <button>Entrar para próxima turma</button>
+    <main class="main__container">
+        <section class="main__section_first">
+            <div class="main__div_first">
+                <h1 class="main__title_first">Desenvolvendo <span>suas</span> próximas habilidades</h1>
+                <p class="main__paragraph_first">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus fugiat et quis laboriosam eveniet repudiandae exercitationem culpa minus veniam nemo deleniti, voluptates nam accusamus aspernatur minima molestiae error numquam cupiditate.</p>
+                <button class="main__button--about">Sobre nós</button>
             </div>
-          </div>
-          <!-- RIGHT SIDE -->
-          <ul>
-            <!-- Question 1 -->
-            <li>
-              <h3>Quais matérias vou pagar?</h3>
-              <p>
-                It is a long established fact that a reader will be distracted
-                by the readable content of a page when looking at its layout.
-                The point of using Lorem Ipsum is that it has a more-or-less
-                normal distribution of letters, as opposed to using
-              </p>
-            </li>
-            <!-- Question 2 -->
-            <li>
-              <h3>Tenho direito à cancelamento?</h3>
-              <p>
-                It is a long established fact that a reader will be distracted
-                by the readable content of a page when looking at its layout.
-                The point of using Lorem Ipsum is that it has a more-or-less
-                normal distribution of letters, as opposed to using
-              </p>
-            </li>
-            <!-- Question 3 -->
-            <li>
-              <h3>O acesso do curso é vitalício?</h3>
-              <p>
-                It is a long established fact that a reader will be distracted
-                by the readable content of a page when looking at its layout.
-                The point of using Lorem Ipsum is that it has a more-or-less
-                normal distribution of letters, as opposed to using
-              </p>
-            </li>
-            <!-- Question 4 -->
-            <li>
-              <h3>O acesso do curso é vitalício?</h3>
-              <p>
-                It is a long established fact that a reader will be distracted
-                by the readable content of a page when looking at its layout.
-                The point of using Lorem Ipsum is that it has a more-or-less
-                normal distribution of letters, as opposed to using
-              </p>
-            </li>
-          </ul>
-        </div>
-      </section>
-
-      <!-- ====== Section Comments ====== -->
-      <section>
-        <div>
-          <!-- RIGHT SIDE -->
-          <div>
-            <div>
-              <h2>O que nossos alunos comentam?</h2>
-              <p>
-                Lorem Ipsum is simply dummy text of the printing and typesetting
-                industry. Lorem Ipsum has been the industry's standard dummy
-                text ever since the 1500s
-              </p>
+        </section>
+        <section class="main__section_second">
+            <div class="main__div_second">
+                <h2 class="main_title_about">Quem somos nós?</h2>
+                <p class="main__paragraph_second">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using</p>
             </div>
-          </div>
-          <!-- LEFT SIDE -->
-          <ul>
-            <!-- Comment 1 -->
-            <li>
-              <div>
-                <h3>Júlia Lima</h3>
-                <p>Aluna na turma 2019</p>
-              </div>
-              <p>
-                It is a long established fact that a reader will be distracted
-                by the readable content of a page when looking at its layout.
-                The point of using Lorem Ipsum is that it has a more-or-less
-                normal distribution of letters, as opposed to using 👋🏿
-              </p>
-            </li>
-            <!-- Comment 2 -->
-            <li>
-              <div>
-                <h3>Carlos Ino</h3>
-                <p>Aluno na turma 2020</p>
-              </div>
-              <p>
-                It is a 🎨 established fact that a reader will be distracted by
-                the readable content of a page when looking at its layout. The
-                point of using Lorem Ipsum is that it has a more-or-less normal
-                distribution of letters, as opposed to using
-              </p>
-            </li>
-            <!-- Comment 3 -->
-            <li>
-              <div>
-                <h3>Camila Dias</h3>
-                <p>Aluna na turma 2019</p>
-              </div>
-              <p>
-                It is a long established fact that a reader will be distracted
-                by the readable content of a page when looking at its layout.
-                The point of using Lorem Ipsum is that it has a more-or-less
-                normal distribution of letters, as opposed to using ❤️ ❤️ ❤️
-              </p>
-            </li>
-            <!-- Comment 4 -->
-            <li>
-              <div>
-                <h3>João Vaz</h3>
-                <p>Aluno na turma 2019</p>
-              </div>
-              <p>
-                It is a long established fact that a reader will be distracted
-                by the readable content of a page when looking at its layout.
-                The point of using Lorem Ipsum is that it has a more-or-less
-                normal distribution of letters, as opposed to using 🕓 🕓 🕓️
-              </p>
-            </li>
-            <!-- Comment 5 -->
-            <li>
-              <div>
-                <h3>Gio Oliveira</h3>
-                <p>Aluna na turma 2019</p>
-              </div>
-              <p>
-                It is a long established fact that a reader will be distracted
-                by the readable content of a page when looking at its layout.
-                The point of using Lorem Ipsum is that it has a more-or-less
-                normal distribution of letters, as opposed to using 👏 👏 👏️
-              </p>
-            </li>
-          </ul>
-        </div>
-      </section>
+        </section>
+        <section class="main__section_third">
+            <div class="main__div_questions">
+                <h2 class="main__title_second">Dúvidas frequentes</h2>
+                <p class="main__paragraph_questions">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, dolor explicabo odit laborum quibusdam deleniti voluptatibus atque est dolores impedit iure eum officia magni temporibus, aliquid neque? Illum, nobis blanditiis?</p>
+                <button class="main__button--enter">Entrar para próxima turma</button>
+            </div>
+            <div class="main__div_questions_second">
+                <div>
+                    <h3 class="main__title_third">Quanto custa o curso?</h3>
+                    <p class="main__paragraph_questions">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using</p>
+                </div>
+                <div>
+                    <h3 class="main__title_third">Quais matérias vou pagar?</h3>
+                    <p class="main__paragraph_questions">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using</p>
+                </div>
+                <div>
+                    <h3 class="main__title_third">Tenho direito a cancelamento?</h3>
+                    <p class="main__paragraph_questions">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using</p>
+                </div>
+                <div>
+                    <h3 class="main__title_third">O acesso do curso é vitalício?</h3>
+                    <p class="main__paragraph_questions">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using</p>
+                </div>
+            </div>
+        </section>
+        <section class="main__section_last">
+            <div class="main__div_comments">
+                <div class="student__card">
+                    <div>
+                        <h3 class="main__title_third">Júlia Lima</h3>
+                        <p>Aluna na turma 2019</p>
+                    </div>
+                    <p class="main__paragraph_comments">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using</p>
+                </div>
+                <div class="student__card">
+                    <div>
+                        <h3 class="main__title_third">Carlos Ino</h3>
+                        <p>Aluno na turma 2020</p>
+                    </div>
+                    <p class="main__paragraph_comments">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using</p>
+                </div>
+                <div class="student__card">
+                    <div>
+                        <h3 class="main__title_third">Camila Dias</h3>
+                        <p>Aluna na turma 2019</p>
+                    </div>
+                    <p class="main__paragraph_comments">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using</p>
+                </div>
+                <div class="student__card">
+                    <div>
+                        <h3 class="main__title_third">João Vaz</h3>
+                        <p>Aluno na turma 2019</p>
+                    </div>
+                    <p class="main__paragraph_comments">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using</p>
+                </div>
+                <div class="student__card">
+                    <div>
+                        <h3 class="main__title_third">Gio Oliveira</h3>
+                        <p>Aluna na turma 2019</p>
+                    </div>
+                    <p class="main__paragraph_comments">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using</p>
+                </div>
+            </div>
+            <div class="main__div_last">
+                <h2 class="main__title_last">O que nossos alunos comentam?</h2>
+                <p class="main__paragraph_last">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti voluptates culpa iusto accusantium molestias itaque labore, quidem ducimus voluptatum, pariatur quam harum, ab nulla magnam tenetur. Quos dolor iure vero.</p>
+            </div>
+        </section>
+        <dialog class="modalController">
+            <div class="modal__container">
+                <div class="modal__div">
+                    <h1>Cadastro</h1>
+                    <button id="closeModal">X</button>
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, eligendi ut minus cupiditate esse repudiandae dolorem necessitatibus eius rerum enim, quis assumenda tempore sed. Facilis tempore perferendis vero dolorem delectus.</p>
+                <form class="modal__div_form">
+                    <input type="email" placeholder="Digitar email" id="email" name="email">
+                    <button class="modal__button">Entrar na lista para próxima turma</button>
+                </form>
+            </div>
+        </dialog>
     </main>
 
-    <!-- ====== Footer ====== -->
-    <footer>
-      <img src="" alt="" />
+    <footer class="footer__container">
+        <img src="./src/assets/logo.svg" alt="Logo do site">
     </footer>
-
-    <!-- ====== Modal ====== -->
-    <dialog></dialog>
-  </body>
+</body>
 </html>
